@@ -1,3 +1,15 @@
+2013-01-29  Laszlo Gombos  <l.gombos@samsung.com>
+
+        [CMake] Add minimum version information for tool dependencies
+        https://bugs.webkit.org/show_bug.cgi?id=97592
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Capture the minimum version information for the tools that are required
+        to build WebKit for all CMake based build systems.
+
+        * CMakeLists.txt:
+
 2013-01-29  Nate Chapin  <japhet@chromium.org>
 
         Enable reuse of cached main resources
